2007-09-08 Mathieu Blondel <mblondel@cvs.gnome.org>

    * release 1.0-beta4

2007-09-08 Mathieu Blondel <mblondel@cvs.gnome.org>

    * README: Updated for upcoming release.
    * NEWS: Likewise.

2007-09-08 Mathieu Blondel <mblondel@cvs.gnome.org>

    * win32/fantasdic.c: Move fantasdic/, GTK/, ruby/, ruby-gettext/, 
    ruby-gtk2/ and win32-pipe/ to a new dir lib/ in order to hide them from the
    user.
    * win32/README: Update instructions to follow this change.

2007-09-04 Mathieu Blondel <mblondel@cvs.gnome.org>

    * TODO: Updated with new ideas.

2007-09-02 Mathieu Blondel <mblondel@cvs.gnome.org>

    * lib/fantasdic.rb: intltool doesn't recognize _('...'). Use double quotes.

2007-09-02 Mathieu Blondel <mblondel@cvs.gnome.org>

    * fantasdic.desktop: Fantasdic should always be described as a "dictionary
    application". "DICT client" doesn't make sense for most people...
    * lib/fantasdic.rb: Likewise.

2007-09-01 Mathieu Blondel <mblondel@cvs.gnome.org>

    * lib/fantasdic/ui/preferences_dialog.rb: Use the hide method instead of
    destroy. It seems to workaround some GC-related bug in RG2.
    * lib/fantasdic/ui/add_dictionary_dialog.rb: Likewise.

2007-09-01 Mathieu Blondel <mblondel@cvs.gnome.org>

    * lib/fantasdic/preferences.rb: Handles the case when the config file is
    blank or malformed.

2007-08-31 Mathieu Blondel <mblondel@cvs.gnome.org>

    * THANKS: Added :).

2007-08-31 Mathieu Blondel <mblondel@cvs.gnome.org>

    * pre-setup.rb: Don't act differently on Windows.
    * win32/: Added. This directory will be used for all the win32 stuff which
    obviously can't go to lib/.
    * win32/gen_po.rb: Added. This file generates the .mo files and must be run
    from win32/.
    * win32/fantasdic.c: Added. Run the ruby interpreter in a sub process and
    hide the command pop-up window.
    * win32/README: Instructions to help prepare an archive which contains all